--- a/public/sprint.css
+++ b/public/sprint.css
@@ -2,6 +2,8 @@ html, body {
     height: 100%;
 }
 
+/* Barre principale : titre, date, authentification */
+
 .headSprint {
     background : rgb(179, 124, 133);
 }
@@ -58,12 +60,36 @@ html, body {
     width: 20px;
 }
 
-.column {
+.signButton {
+    background-color: white;
+    border: 0;
     border-radius: 10px;
-    margin:2vh;
-    padding:50%;
-    padding-left:50%;
-    padding-right:50%;
+    text-align: center;
+    width: 80%;
+    border:1px solid transparent; 
+    -webkit-transition: all 0.4s cubic-bezier(.5, .24, 0, 1);
+    transition: all 0.4s cubic-bezier(.5, .24, 0, 1);
 
-    min-height: 80vh ;
+    margin-left:10%;
+    margin-top: 5%;
+    margin-bottom: 2%;
 }
+
+.signButton:hover {
+    background-color: rgb(201, 137, 190);
+}
+
+/* Product backlog */
+
+.column {
+    margin-top: 2%;
+    margin-bottom: 2%;
+    border: 0.1rem solid black;
+    border-radius: 10px;
+    min-height: 80vh;
+}
+
+.placeInfos {
+    padding: 40%;
+}
+
