--- a/public/sprint.css
+++ b/public/sprint.css
@@ -210,7 +210,11 @@ html, body {
 
 .formLabelsize {
     width:100%;
-    border: 0.1rem solid;
+}
+
+.formLabelSettingsSize {
+    margin-left:5%;
+    width:90%;
 }
 
 .tagColor {
@@ -249,4 +253,54 @@ html, body {
 .scrollY {
    overflow: auto;
    max-height: 700px;
+}
+
+.formSettingsPostit {
+    
+    padding:10%;
+    width:100%;
+}
+
+.settingsPostit { 
+    margin-top: 15%;
+    margin-bottom: 15%;
+    background-color: rgb(56, 103, 141);
+    border: 0;
+    border-radius: 10px;
+    width:100%;
+    text-align: center;
+    border:1px solid transparent; 
+    -webkit-transition: all 0.4s cubic-bezier(.5, .24, 0, 1);
+    transition: all 0.4s cubic-bezier(.5, .24, 0, 1);
+    cursor: pointer;
+
+    font-family: "Open Sans";
+    font-weight: lighter;
+    color: white;
+}
+
+.settingsPostit:hover {
+    background-color: rgb(98, 105, 173);
+}
+
+#modifyPostitStyle {
+    margin-top: 25%;
+    margin-bottom: 15%;
+    background-color: rgb(56, 103, 141);
+    border: 0;
+    border-radius: 10px;
+    width:100%;
+    text-align: center;
+    border:1px solid transparent; 
+    -webkit-transition: all 0.4s cubic-bezier(.5, .24, 0, 1);
+    transition: all 0.4s cubic-bezier(.5, .24, 0, 1);
+    cursor: pointer;
+
+    font-family: "Open Sans";
+    font-weight: lighter;
+    color: white;
+}
+
+#modifyPostitStyle:hover {
+    background-color: rgb(98, 105, 173);
 }
