--- a/public/sprint.css
+++ b/public/sprint.css
@@ -304,3 +304,37 @@ html, body {
 #modifyPostitStyle:hover {
     background-color: rgb(98, 105, 173);
 }
+
+.addColumn {
+    margin-top:3%;
+    margin-left: 1%;
+    background-color: rgb(56, 103, 141);
+    border: 0;
+    border-radius: 5px;
+    text-align: center;
+    border:1px solid transparent; 
+    -webkit-transition: all 0.4s cubic-bezier(.5, .24, 0, 1);
+    transition: all 0.4s cubic-bezier(.5, .24, 0, 1);
+    cursor: pointer;
+
+    font-family: "Open Sans";
+    font-weight: lighter;
+    color:white;
+}
+
+.columnKanbanStyle {
+    padding-bottom: 5%;
+}
+
+.resizeColumnKanban {
+    margin-left:2%;
+    margin-bottom: 2%;
+}
+
+.backButton {
+    background: transparent;
+    border: none !important;
+    width: 5%;
+    margin-top:2%;
+    margin-bottom: 2%;
+}
