Ajout max postit dans une colonne + debut liste de projets

--- a/public/sprint.css
+++ b/public/sprint.css
@@ -246,9 +246,9 @@ html, body {
     padding-bottom: 50%;
 }
 
-.noscroll {
+/* .noscroll {
     overflow: hidden;
-}
+} */
 
 .scrollY {
    overflow: auto;
