--- a/public/sprint.css
+++ b/public/sprint.css
@@ -346,8 +346,7 @@
 .resizeColumnKanban {
     margin-left:2%;
     margin-bottom: 2%;
-    width: 80%;
-    padding-bottom: 100%;
+    width: 10%;
 }
 
 .backSprintButton {
@@ -360,10 +359,6 @@
 
 .resizeTitlePostit {
     font-size: large;
-    margin-left:20%;
     padding:5%;
-}
-
-.test {
-    background:blue;
+    margin-bottom: 50%;
 }
