--- a/public/sprint.css
+++ b/public/sprint.css
@@ -346,7 +346,8 @@
 .resizeColumnKanban {
     margin-left:2%;
     margin-bottom: 2%;
-    width: 10%;
+    height: 50%;
+    width: 25%;
 }
 
 .backSprintButton {
@@ -360,5 +361,4 @@
 .resizeTitlePostit {
     font-size: large;
     padding:5%;
-    margin-bottom: 50%;
 }
